made more changes. removed CSRF inputs from front end and applied them to header.

--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -7,10 +7,12 @@
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js" integrity="sha256-9zljDKpE/mQxmaR4V2cGVaQ7arF3CcXxarvgr7Sj8Uc=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="../assets/css/master.css">
-    <link rel="stylesheet" href="../assets/css/fonts.css">
     <script src="../assets/js/templates/master.js"></script>
-    <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>            
+    <script src="https://kit.fontawesome.com/15b6d67935.js" crossorigin="anonymous"></script>
+    <script src="/assets/js/functions/UserFunctions.js"></script>        
+    <script src="/assets/js/functions/popovers.js"></script>   
 </head>
+<div id="popup" style="display:none"></div>
 <body>
     <script>
         window.addEventListener('load', function () {
@@ -58,5 +60,7 @@
         {% endblock %}
 
     {% include 'footer.html' %}
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+
 </body>
 </html>
