--- a/templates/header.html
+++ b/templates/header.html
@@ -9,9 +9,10 @@
                 <li class="navListLI"><i class="fa-light fa-magnifying-glass"></i> Search</li>
             </ul>
             <ul id="navListRight">                
-                {% set loggedIn = logged_in %}                                
+                {% set loggedIn = logged_in %}
+                {{users.username}}
                 {% if loggedIn == true %}
-                    <li class="navLinkRight"><a class="navLinkBtn" href="/dashboard"><i class="fa-light fa-circle-user"></i>Your Profile</a></li>
+                    <li class="navLinkRight"><a class="navLinkBtn" href="/dashboard" data-="loggedIn"><i class="fa-light fa-circle-user"></i>Your Profile</a></li>
                     {% else %}
                     <li class="navLinkRight"><a class="navLinkBtn" href="/login"><i class="fa-light fa-user-cowboy"></i> Login/Register</a></li>
                 {% endif %}
